--- a/test/index.html
+++ b/test/index.html
@@ -19,7 +19,7 @@
 <script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>
 <script src="../dist/pageeditor.js"></script>
 <script>
-  PE.init('page')
+  pe = PE.init('page')
 </script>
 <script>
   $(function(){
