--- a/test/index.html
+++ b/test/index.html
@@ -15,26 +15,13 @@
 <div id="page">
   
 </div>
+
 <script src="../node_modules/jquery/dist/jquery.js"></script>
 <script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>
+<script src="../node_modules/urijs/src/URI.js"></script>
 <script src="../dist/pageeditor.js"></script>
 <script>
   pe = PE.init('page')
-</script>
-<script>
-  $(function(){
-    $('#dh-resolve').click(function(){
-      $('#gpte-trans').contents().find('link').each(function(){
-        var href = $(this).attr('href');
-        console.log(URI(href));
-        href && !URI(href).hostname() && $(this).attr('href', URI(ORI_URL).absoluteTo(href) + href);
-      });
-      $('#gpte-trans').contents().find('img, script').each(function(){
-        var src = $(this).attr('src');
-        src && !URI(src).hostname() && $(this).attr('src', URI(ORI_URL).absoluteTo(src) + src);
-      });
-    });
-  });
 </script>
 </body>
 </html>
