Coding edit taranslated page function.

--- a/test/index.html
+++ b/test/index.html
@@ -23,7 +23,7 @@
     // 左iframe中对照用的页面的url
     ref_page_url: './iframe_for_test.html',
     // 右iframe中编辑用的页面的url
-    edit_page_url: './iframe_for_test.html',
+    edit_page_url: './iframe_for_test_translated.html',
     // 原始页面的url
     ori_url: 'http://getbootstrap.com/docs/4.0/getting-started/introduction/',
     // 服务器的url
